# onnxrt-backend-dev

./: .gitignore  CHANGELOGS.html  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  genindex.html  index.html  license.html  objects.inv  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html
.github/workflows/: check-urls.yml  documentation.yml  wheels-any.yml
_downloads/0534a82190ecce5d98ccd3b019bd1c7a/: plot_torch_export.ipynb
_downloads/483adad4fc5a342f7ea5f5b557846e94/: plotting-1.py
_downloads/5ea159170a8b6e6d090b561d7986469d/: plot_torch_export.py
_downloads/73001b3c7f6e52eea781203ca5722d48/: plot_llama_bench.ipynb
_downloads/dc0b7526db83bbdb1358de62ea9893ba/: plot_llama_bench.py
_modules/: index.html
_modules/onnxrt_backend_dev/: args.html  bench_run.html  ext_test_case.html
_sources/: sg_execution_times.rst
_sources/api/: benchmarks.rst  index.rst  monitoring.rst
_sources/auto_examples/: index.rst  plot_llama_bench.rst  plot_torch_export.rst  sg_execution_times.rst
api/: benchmarks.html  index.html  monitoring.html  plotting.html  tests.html
auto_examples/: index.html  plot_llama_bench.html  plot_torch_export.html  sg_execution_times.html
docs/: conf.py  index.rst  license.rst
docs/api/: convert_helper.rst  index.rst  monitoring.rst  plotting.rst  tests.rst
docs/examples/: plot_llama_bench.py  plot_torch_export.py
docs/tutorial/: index.rst
onnxrt_backend_dev/: __init__.py  args.py  bench_run.py  convert_helper.py  ext_test_case.py
onnxrt_backend_dev/llama/: dort_bench.py  llama_helper.py
onnxrt_backend_dev/monitoring/: benchmark.py  memory_peak.py  profiling.py
onnxrt_backend_dev/plotting/: memory.py
plot_directive/api/: monitoring-1.py
tests/: test_args.py  test_bench_script.py  test_convert_helper.py  test_documentation_examples.py
tutorial/: index.html
(+11 files in other folders)
